# Meshfab

./: CMakeLists.txt  README.md
src/: App.cpp  App.h  FbxEngine.cpp  FbxEngine.h  FrameBuffer.cpp  FrameBuffer.h  Input.cpp  Input.h  MainWindow.cpp  MainWindow.h  ModelImporter.cpp  ModelImporter.h  Scene3D.cpp  Scene3D.h  SceneObject.cpp  SceneObject.h  StaticModel.cpp  StaticModel.h  Teknshi_importer.cpp  Teknshi_importer.h  Transform.h  Window.cpp  Window.h  camera.cpp  camera.h  imgui.ini  main.cpp  renderer.cpp  renderer.h  shader.h
src/GeoShapes/: Shape2D.cpp  Shape2D.h  Shape3D.cpp  Shape3D.h
src/GeoShapes/private/: Cube.cpp  Cube.h  GPUBufferID.h  GeomtryInfo.h  Quad.cpp  Quad.h
src/GeoShapes/private/halfedge/: Face.cpp  Face.h  Halfedge.cpp  Halfedge.h  Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
src/Materials/: Materials.cpp  Materials.h
src/Materials/Private/: ColoredMaterial.cpp  ShaderProgram.h
src/client/: CMakeLists.txt
src/client/src/: Actions.cpp  Actions.h  App.cpp  App.h  Input.cpp  Input.h  UI.cpp  UI.h  main.cpp
src/client/src/imgui/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/geometry/: CMakeLists.txt
src/geometry/src/: Shape3D.cpp  Shape3D.h
src/geometry/src/private/: BoundingBox.cpp  BoundingBox.h  Cube.cpp  GContainer.cpp  GContainer.h  GeomtryInfo.h  Grid.cpp  Grid.h  Model3D.cpp  Model3D.h  Quad.h
src/geometry/src/private/halfedge/: Face.cpp  Face.h  Halfedge.cpp  Halfedge.h  Mesh.cpp  Mesh.h  Vertex.h
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_widgets.cpp
src/modelload/: CMakeLists.txt
src/modelload/src/: Model.cpp  Model.h
src/qt-viewer/: CMakeLists.txt
src/qt-viewer/src/: Actions.cpp  Actions.h  App.cpp  App.h  Shaders_Window.cpp  Shaders_Window.h  Window.cpp  Window.h
src/renderer/: CMakeLists.txt
src/renderer/src/: FrameBuffer.cpp  FrameBuffer.h  Framerenderer.cpp  Framerenderer.h  Scene.cpp  Scene.h  Scene3D.cpp  SceneObject.cpp  SceneObject.h  Transform.cpp  Transform.h  camera.cpp  camera.h  renderer.cpp  renderer.h
src/renderer/src/Materials/: Materials.cpp  Materials.h
src/renderer/src/Materials/Private/: CheckboardMaterial.cpp  CheckboardMaterial.h  ColoredMaterial.cpp  ColoredMaterial.h  DefaultMaterial.cpp  DefaultMaterial.h  DiffuseMaterial.cpp  DiffuseMaterial.h  FramerenderMaterial.cpp  FramerenderMaterial.h  PhongMaterial.cpp  PhongMaterial.h  ShaderProgram.cpp  ShaderProgram.h
src/texturing/: CMakeLists.txt
src/texturing/src/: Texture.cpp  Texture.h
src/texturing/src/stb/: stb_image_aug.c  stbi_DDS_aug_c.h
src/ui_winds/: InspectorWindow.cpp  InspectorWindow.h  MainWindow.cpp  MainWindow.h  SceneWindow.cpp  SceneWindow.h
